// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: SearchBar render component with error style 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM jmaqBM"
  >
    <label
      class="sc-hKFxyN eTkaOF"
    />
    <div
      class="sc-gtsrHT fuWcwQ"
    >
      <img
        alt=""
        height="24"
        src="test-file-stub"
        width="24"
      />
    </div>
    <input
      class="sc-dlnjwi ebcHYO"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`[Component]: SearchBar render the component 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM jmaqBM"
  >
    <label
      class="sc-hKFxyN eTkaOF"
    />
    <div
      class="sc-gtsrHT fuWcwQ"
    >
      <img
        alt=""
        height="24"
        src="test-file-stub"
        width="24"
      />
    </div>
    <input
      class="sc-dlnjwi wwEOk"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
